--- a/index.html
+++ b/index.html
@@ -266,26 +266,31 @@
         <div class="about__circle"></div> 
       </section>
     </main>
-
-    <footer class="footer">
+<footer class="footer">
         <div class="footer__columns">
         <div class="footer__column">
           <img src="./images/logo_white.svg" alt="TripleTen logo" class="footer__logo"/>
         </div>
         <div class="footer__column footer__column_content_hours">
-          <h3 class="footer__column-heading">Hours</h3>
           <ul class="footer__list">
+            <li class="footer__list-items">
+              <h3 class="footer__column-heading">Hours</h3>
+            </li>
             <li class="footer__list-items"> Weekdays: 9am-8pm</li>
+
             <li class="footer__list-items"> Weekends: 10am-6pm</li>
           </ul>
         </div>
-        <div class="footer__column footer__column_content_social">
-          <h3 class="footer__column-heading">Social media</h3>
+        <div class="footer__column footer__column_content_social"> 
           <ul class="footer__list">
             <li class="footer__list-items">
-              <img src="./images/facebook_white.svg" alt="Facebook logo" class="footer__social-icon">
+              <h3 class="footer__column-heading">Social media</h3>
+            </li>
+            <li class="footer__list-items">
+              <img src="./images/facebook_white.svg" alt="Facebook logo" class= footer__social-icon">
               <a href="#" class="footer__column-link">Facebook</a>
             </li>
+           
             <li class="footer__list-items">
               <img src="./images/instagram_white.svg" alt="Instagram logo" class="footer__social-icon">
               <a href="#" class="footer__column-link">Instagram</a>
@@ -298,3 +303,5 @@
   </div>
   </body>
 </html>
+
+    
