--- a/index.html
+++ b/index.html
@@ -273,25 +273,25 @@
         </div>
         <div class="footer__column footer__column_content_hours">
           <ul class="footer__list">
-            <li class="footer__list-items">
+            <li class="footer__list-item">
               <h3 class="footer__column-heading">Hours</h3>
             </li>
-            <li class="footer__list-items"> Weekdays: 9am-8pm</li>
+            <li class="footer__list-item"> Weekdays: 9am-8pm</li>
 
-            <li class="footer__list-items"> Weekends: 10am-6pm</li>
+            <li class="footer__list-item"> Weekends: 10am-6pm</li>
           </ul>
         </div>
         <div class="footer__column footer__column_content_social"> 
           <ul class="footer__list">
-            <li class="footer__list-items">
+            <li class="footer__list-item">
               <h3 class="footer__column-heading">Social media</h3>
             </li>
-            <li class="footer__list-items">
+            <li class="footer__list-item">
               <img src="./images/facebook_white.svg" alt="Facebook logo" class= footer__social-icon">
               <a href="#" class="footer__column-link">Facebook</a>
             </li>
            
-            <li class="footer__list-items">
+            <li class="footer__list-item">
               <img src="./images/instagram_white.svg" alt="Instagram logo" class="footer__social-icon">
               <a href="#" class="footer__column-link">Instagram</a>
             </li>
